# aTetrisGL

./: .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  input.cpp  input.h  main.cpp  ogl_window.cpp  ogl_window.h
